# topic-modeling-eval

./: .gitignore  README.md  pyproject.toml
src/: main.py  supervised.ipynb  supervised.py  validation.py
src/webapp/: webapp.py
src/webapp/static/: main.js  style.css
src/webapp/templates/: dataframe.html  index.html
